reference provider script name appropriately

--- a/config/qemu.yaml
+++ b/config/qemu.yaml
@@ -45,7 +45,7 @@ provisioners:
       scripts:
       - scripts/base.sh
       - scripts/vagrant.sh
-      - scripts/virtualbox.sh
+      - scripts/qemu.sh
       - scripts/cleanup.sh
   type: shell
 variables:
