Lots of general changes
moving toward the MVP, the build script works, but needs more
development, the cleanup task was pulled out and allowed users to save
with a `-s`; going forward I'm going to try and make sure I'm not
making major refactors.

--- a/config/providers/aws.yaml
+++ b/config/providers/aws.yaml
@@ -21,13 +21,13 @@ builders:
     role: packer-creator
   type: amazon-ebs
   vpc_id: "{{user `vpc`}}"
-post-processors: 
+post-processors:
 provisioners:
 - execute_command: sudo {{.Vars}} sh {{.Path}}
   scripts:
-  - scripts/update.sh
-  - scripts/install.sh
-  - scripts/cleanup.sh
+  - build/update.sh
+  - build/install.sh
+  - build/cleanup.sh
   type: shell
 variables:
   ami_name: centos6.6-cloud-init
