--- a/bin/build
+++ b/bin/build
@@ -1,5 +1,6 @@
 #!/usr/bin/env ruby
 # Use this to compare tasks and environments for a given client.
+require 'fileutils'
 require 'thor'
 require 'yaml'
 require 'json'
